<resources>
    <string name="calibrating">calibrating</string>
    <string name="string_bmi_title">BMI</string>
    <string name="string_privacy_str1">我们收集数据是根据您与我们的互动和您所做出的选择,包括您的隐私设置以及您使用的产品和功能。我们收集的数据可能包括 SOK/API/JS 代码版本、浏览器、互联网服务提供商、IP地址、平台、时间戳、应用标识符、 应用程序版本、应用分发渠道、独立设备标识符、IOS广告标识符（IDFA）、安卓广告主标识符、 网卡（MAC）地址、国际移动设备识别码（IMEI）、设备型号、终端制造厂商、终端设备操作系统版本、 会话启动/停止时间、语言所在地、时区和网络状态（WIFi等）、硬盘、CPU和电池使用情况等。</string>
    <string name="string_privacy_str2">当您使用账号登录 App时，我们会收集您个人填写的基本信息和智能穿戴设备采集的健康数据， 我们会对您的数据进行存储和分析，以便给您提供更好的数据展示和健康指导。如何不希望您的个人数据被收集，您可以使用无账号登录。</string>
    <string name="string_privacy_str3">我们的业务可能需要我们转移您的个人数据至欧洲经济区以外的国家，这些国家可能包括中国。我们会采取适当的措施以确保您个人数据的接收者履行保密义务。如果您不希望您的个人数据被收集和转移，您可以选择使用无账号登录。</string>
    <string name="string_privacy_str4">您使用我们 App 时，我们会如上文所述，对信息进行收集，信息的收集是为了更好的优化和管理软件，以便给您提供更好的服务。对于您个人数据的收集，您有权选择账号登录或无账号登录，使用账号登录我们会收集您的个人数据，无账号登录我们不会收集您的个人数据。如果您认为我们对您个人数据和信息的处理违反了适用法律，您可以向监管机构投诉。</string>
    <string name="string_less_18">&lt;18.5</string>
    <string name="string_more_than_25">>=25</string>
    <string name="string_more_than_23">>=23</string>
    <string name="string_more_than_24">>=24</string>
    <string name="string_more_than_30">>=30</string>
    <string name="string_more_than_40">>=40.0</string>
    <string name="string_bmi_formual">体重指数BMI=体重/身高的平方(国际单位kg/m²)\n 理想BMI(18.5~23.9)=体重(单位kg)÷身高的平方(单位m)  根据世界卫生组织定下的标准：</string>
    <string name="string_bmi_desc">身体质量指数（BMI，BodyMassIndex）是国际上常用的衡量人体肥胖程度和是否健康的重要标准，主要用于统计分析。肥胖程度的判断不能采用体重的绝对值，它天然与身高
有关。因此，BMI通过人体体重和身高两个数值获得相对客观的参数，并用这个参数所处范围衡量身体质量。</string>
    <string name="string_note">Note:</string>
    <string name="string_light_alert">The highest brightness setting results in faster power consumption and shorter battery life.</string>
    <string name="string_wrist_alert">A higher sensitivity setting results in faster power consumption and shorter battery life.</string>
    <string name="smart_watch_noti">Smartwatch notification</string>
    <string name="app_firm_version">Firmware version</string>
    <string name="string_ota_dev_ready">Wait a minute... The equipment is in preparation</string>
    <string name="string_ota_uccess">Successful upgrade</string>
    <string name="more_opera">More operations</string>
    <string name="string_long_time">Delay reminder</string>
    <string name="string_res_alarm">reset your alarm？</string>
    <string name="string_res_ing">Reset...</string>
    <string name="string_radeing">Loading...</string>
    <string name="strinf_up_data_getvis">Get version...</string>
    <string name="string_rade_updata">Ready to complete updateable</string>
    <string name="string_updata_error_isup">Upgrade failed to be re-updated</string>
    <string name="string_updata_error_tryup">Upgrade failed Try to update again</string>
    <string name="msg_center">Message Center</string>
    <string name="string_msg_basic_requ">Basic requirements for notifications</string>
    <string name="string_basic_cont1">1.Make sure RaceFitPro is running and connected to the device</string>
    <string name="string_basic_cont2">2.Make sure RaceFitPro has set up power consumption protection</string>
    <string name="string_basic_cont3">3.Make sure RaceFitPro has set up autorun permission</string>
    <string name="string_basic_cont4">4.Confirm that RaceFitPro has set up system or mobile housekeeper whitelist protection</string>
    <string name="string_apps_alert_title">Q:Why applications such as FaceBook、QQ、Wechat have no notifications?</string>
    <string name="string_apps_cont1">1.Make sure FaceBook、QQ、Wechat and other applications allow displaying message on notification bar</string>
    <string name="string_apps_cont2">2.Disable the RaceFitPro notification permission and enable it again</string>
    <string name="string_to_restart">To restart</string>
    <string name="string_call_phone_alert">Q:Why there is no incoming call alert?</string>
    <string name="string_call_phone_cont1">1.Make sure you have enable the contacts permission</string>
    <string name="string_call_phone_cont2">2.Make sure you have enabled phone call permission</string>
    <string name="string_call_phone_cont3">3.Confirm that the call record permission is turned on.</string>
    <string name="string_smg_alert_title">Q:Why there is no SMS notification?</string>
    <string name="string_smg_alert_content1">2.Make sure you have enabled SMS permission</string>
    <string name="string_enable">Enable</string>
    <string name="string_disable">Disable</string>
    <string name="string_prmiss_close">Disabled permissions, grant manually</string>
    <string name="string_checkGPS_prmiss">Please check if your location permission is open</string>
    <string name="string_sos_prmiss">SOS Related Permissions Not Opened</string>
    <string name="string_sos_tip">SOS has not been opened or no emergency contact has been added.</string>
    <string name="string_long_onclick_phone">Long press editor</string>
    <string name="string_emergency_gelp">Danger, Help me</string>
    <string name="string_emergency_gps">Position</string>
    <string name="string_long_onclick">Long press edit urgent content</string>
    <string name="string_emergency_contact_one">Emergency contact one</string>
    <string name="string_emergency_contact_two">Emergency contact two</string>
    <string name="string_emergency_contact_three">Emergency contact three</string>
    <string name="string_one_key_help">One key call for help</string>
    <string name="string_edit_emergency_messge">Please edit urgent information</string>
    <string name="string_edit_emergency_person">Please edit emergency contacts</string>
    <string name="string_wear_properlay">Please wear properly</string>
    <string name="string_spo2_no_normal">Caveat! Blood oxygen is much lower than normal!</string>
    <string name="string_spo2_lowest">Blood oxygen concentration is low, please pay attention!</string>
    <string name="string_spo2_low">Low blood oxygen concentration</string>
    <string name="string_spo2_concent">Blood oxygen concentration</string>
    <string name="string_add_fd_qr">Sweep and add me as a friend</string>
    <string name="string_bp_night_spo2_check">Blood oxygen nighttime monitoring</string>
    <string name="string_my_qrcode">My QR code</string>
    <string name="string_today_step">Total Exercise Today</string>
    <string name="string_today_heart">Heart Rate Statistics Today</string>
    <string name="string_today_sleep">Sleep quality today</string>
    <string name="string_long_onclick_heart">Slide View Heart Rate Data</string>
    <string name="string_systolic">systolic pressure</string>
    <string name="string_diastolic">diastolic pressure</string>
    <string name="string_bloop_di">Hypotension</string>
    <string name="string_bloop_lixiang">Ideal</string>
    <string name="string_bloop_zhengchang">Normal</string>
    <string name="string_bloop_qingdugao">Mild</string>
    <string name="string_bloop_zhongdugao">Moderate</string>
    <string name="string_bloop_zzhongdugao">Severe</string>
    <string name="string_cankao_res">Reference result</string>
    <string name="fatigue_normal">In good condition</string>
    <string name="fatigue_mild">Mild fatigue</string>
    <string name="fatigue_moderate">Moderate fatigue</string>
    <string name="fatigue_severe">Severe fatigue</string>
    <string name="fatigue_noral_suggest">Your energy is full, you don\'t feel tired, your concentration is high, and your work efficiency is very high.</string>
    <string name="fatigue_mild_suggest">You are slightly tired and uncomfortable. You can usually listen to some of your favorite music to ease it.</string>
    <string name="fatigue_moderate_suggest">You may have feelings of drowsiness, fatigue, dizziness, body stiffness, etc. You can look at the distant scenery or take a nap, relieve fatigue and prepare for efficient work.</string>
    <string name="fatigue_sebere_suggest">You may not be able to concentrate, especially sleepy. Usually pay more attention to rest, drink plenty of water, keep your mind relaxed, your body and mind are relaxed, and your work efficiency will be high.</string>
    <string name="count_down">Countdown</string>
    <string name="show_on_screen">Interface display</string>
    <string name="common_time">Common time</string>
    <string name="count_douwn_desc">Remarks \n 1, the interface display is enabled, and the device can use the timing function separately. \n 2, when the device is used alone, the timing is the usual duration.
         \n 3, when the device uses the timing function alone, press and hold for 3 seconds on the timing interface. \n 4, after the countdown starts, press and hold the timer for 3 seconds to end the timing.</string>
    <string name="vpspo2h_sleep_sportvalue">Range of sleeping activity</string>
    <string name="vpspo2h_breath_break">Obstructive sleep apnea syndrome</string>
    <string name="vpspo2h_ratevaraive">脉率变异性</string>
    <string name="vpspo2h_spo2h">Blood oxygen</string>
    <string name="vpspo2h_low_remain">Hypoxia and arousal</string>
    <string name="ave_value">Avg value</string>
    <string name="heart_health_sorce">Heart health index</string>
    <string name="analysis_result">Analytic result(For reference only)</string>
    <string name="spo2_breath_break">Blood oxygen/Apnea</string>
    <string name="spo2_main_sorce">Key indicators</string>
    <string name="more">More</string>
    <string name="pack_up">Pack Up</string>
    <string name="name">Name</string>
    <string name="frequent_time">Frequently appearing time</string>
    <string name="times">Frequency</string>
    <string name="reference">Reference value</string>
    <string name="max_min">Max(Min)</string>
    <string name="intervention_measures">Intervention measures</string>
    <string name="vpspo2h_state_realtime">Real-time blood oxygen</string>
    <string name="vpspo2h_state_breathbreak">Apnea</string>
    <string name="vpspo2h_state_calm">Mild</string>
    <string name="vpspo2h_state_error">Abnormal</string>
    <string name="vpspo2h_state_little">Silent</string>
    <string name="vpspo2h_state_mulmulsport">Dysphoria</string>
    <string name="vpspo2h_state_mulsport">Hyperaction</string>
    <string name="vpspo2h_state_normal">Normal</string>
    <string name="vpspo2h_toptitle_breath">Respiratory</string>
    <string name="vpspo2h_toptitle_heart">Cardiac load</string>
    <string name="vpspo2h_toptitle_lowspo2h">Hypoxia time</string>
    <string name="vpspo2h_toptitle_sleep">Sleeping activity</string>
    <string name="lero_referenc">Reference of Lorentz scatter diagram</string>
    <string name="hrv_data">HRV data</string>
    <string name="spo2_test">SpO2 test</string>
    <string name="spo2_calibration_pro">Calibration progress</string>
    <string name="fatigue_test">Fatigue test</string>
    <string name="fatigue_no_test_desc">Appropriate attention their physical condition oh!</string>
    <string name="string_heart_rate_time">heart rate time</string>
    <string name="string_steps_still">Rest</string>
    <string name="string_steps_small">A little</string>
    <string name="string_steps_medium">Medium</string>
    <string name="string_steps_mass">Mass</string>
    <string name="string_steps_severe">Strenuous</string>
    <string name="string_reminding_times">Reminder interval</string>
    <string name="avg_speed">Avg speed</string>
    <string name="paces">Pace</string>
    <string name="input_password">Please enter your password</string>
    <string name="input_name">Input phone number</string>
    <string name="user_regsiter">Sign up</string>
    <string name="save">save</string>
    <string name="Sedentaryreminder">Sedentary reminder</string>
    <string name="star">Start</string>
    <string name="km_cal">Kcal</string>
    <string name="end_time">Stop time</string>
    <string name="start_time">Start time</string>
    <string name="heart_rate">Heart rate</string>
</resources>