<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/comment_b30_title_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="@color/new_colorAccent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/login_bg_img" />

        <com.example.bozhilun.android.siswatch.view.LoginWaveView
            android:id="@+id/login_waveView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/size_24"
        android:layout_marginTop="@dimen/size_30"
        android:layout_marginRight="@dimen/size_24"
        android:layout_weight="2.5"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username_regsiter"
                style="@style/MyEditText"
                android:drawableLeft="@mipmap/yonghuming_dianji"
                android:drawablePadding="@dimen/size_10"
                android:hint="@string/input_name"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/new_colorAccent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_password_regster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_logonregigter"
                style="@style/MyEditText"
                android:drawableLeft="@mipmap/suo_dianji"
                android:drawablePadding="@dimen/size_10"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_btn_reger"
            style="@style/match_btn"
            android:layout_below="@+id/email_login_form"
            android:layout_marginTop="@dimen/size_30"
            android:background="@drawable/blue_btn_selector"
            android:text="@string/user_regsiter" />

        <TextView
            android:id="@+id/register_agreement_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />
    </LinearLayout>


</LinearLayout>